MTP-1829: fix spacing for layouts on new colors

--- a/mt-kit/core/css/src/utilities/_layout.scss
+++ b/mt-kit/core/css/src/utilities/_layout.scss
@@ -17,14 +17,21 @@
 [data-portal-region='main'] {
   gap: var(--spacer-medium);
 }
-
+//todo remove after 22.11.2023
 [data-portal-component-type='layout'].bg-lighter-light-blue,
-[data-portal-component-type='layout'].bg-light-beige {
+[data-portal-component-type='layout'].bg-light-beige,
+//todo end
+[data-portal-component-type='layout'].background-mt-bg-furu,
+[data-portal-component-type='layout'].background-mt-mellombeige {
   padding-top: var(--spacer-small);
   padding-bottom: var(--spacer-small);
 
+  //todo remove after 22.11.2023
   & + [data-portal-component-type='layout'].bg-light-beige,
-  + [data-portal-component-type='layout'].bg-lighter-light-blue {
+  + [data-portal-component-type='layout'].bg-lighter-light-blue,
+  //todo end
+  & + [data-portal-component-type='layout'].background-mt-mellombeige,
+  + [data-portal-component-type='layout'].background-mt-bg-furu {
     margin-top: 0;
   }
 }
